--- a/styles.css
+++ b/styles.css
@@ -22,18 +22,19 @@
   *, span, font, #back_btn, #next_btn, input, textarea{
   font-family: 'Open Sans', sans-serif!important;
   }
-  
-  .maincontainer{
-  background-color:#000;
-  height:100%;
-  margin-left:auto;
-  margin-right:auto;
-  padding:.75em;
-  position:relative;
-  width:100%;
-  }
-  
-  body > table > tbody > tr{
+
+
+.maincontainer{
+background-color:yellow;
+height:100%;
+margin-left:auto;
+margin-right:auto;
+padding:.75em;
+position:relative;
+width:100%;
+}
+
+ body > table > tbody > tr{
   vertical-align:top;
   }
   
@@ -637,634 +638,3 @@
   *, *:before, *:after{
   -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;
   }
-  
-  /* set default font family to sans-serif / prevent iOS text size adjust after orientation change, without disabling user zoom. */
-  html{
-  background-color: #000!important;
-  height:100%;
-  outline:0;
-  -ms-text-size-adjust:100%;
-  -webkit-text-size-adjust:100%;
-  }
-  
-  body{
-  background-color: #000!important;
-  color:#444;
-  height:100%;
-  text-align:center; margin:0!important;
-  }
-  
-  *, span, font, #back_btn, #next_btn, input, textarea{
-  font-family: 'Open Sans', sans-serif!important;
-  }
-  
-  .maincontainer{
-  background-color:#000;
-  height:100%;
-  margin-left:auto;
-  margin-right:auto;
-  padding:.75em;
-  position:relative;
-  width:100%;
-  }
-  
-  body > table > tbody > tr{
-  vertical-align:top;
-  }
-  
-  /* (3 multimedia elements) */ 
-  .toptable{
-  border-bottom:1px solid #333;
-  margin-left:auto;
-  margin-right:auto;
-  margin-bottom:1em;
-  margin-top:6px;
-  padding:1em .125em;
-  max-width:1280px;
-  width:100%;
-  }
-  
-  
-  
-  
-  /* - - info line top - - */
-  #progoutertable{
-  border-collapse: collapse;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  }
-  #proginnertable{border-collapse: collapse; width: 100%;}
-  
-  .info{
-  display: none;
-  }
-  
-  
-  /* contains maintable */
-  form{
-  margin-bottom:0;
-  margin-top:0;
-  }
-  
-  .maincontainer tbody tr td > form, .upperspacetable, .bottomtable{}
-  
-  /* containing question-/additionaltext, answerblock, back-/continuebuttons */
-  .maintable{
-  border:none;
-  margin-left:auto;
-  margin-right:auto;
-  }
-  
-  /* located between info line top & questiontexttable (3 multimedia elements) */
-  .maincontainer tbody tr td > .upperspacetable{}
-  
-  .maintable tbody tr td > .upperspacetable{
-  border:none; /*remove border top for multiple questions*/
-  height:30px; /*spacing to previous question*/
-  }
-  
-  /* questiontext box */
-  .questiontexttable{
-  background-color:#312f3c!important;
-  margin-bottom:10px; /*spacing between questiontext & additional text*/
-  
-  margin-left:auto;
-  margin-right:auto;
-  
-  padding:.75em;
-  
-  width:100%;
-  
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  }
-  
-  
-  .questiontexttable tbody tr td{
-  padding:0!important; /*correct alignment to additional text*/
-  }
-  
-  .questiontable.q_matrix{
-  width:100%;
-  }
-  
-  
-  
-  
-  
-  .answer.single, .answer.multiple{
-  border-bottom:1px solid #c4c4c4 !important;
-  border-top:1px solid #000;
-  
-  padding:0 .5em !important;
-  
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-  }
-  
-  .answer.single:hover, .answer.multiple:hover{
-  border-bottom:1px solid #36dea7 !important;
-  
-  }
-  
-  
-  
-  
-  .answer.freetext{
-  border-bottom:none;
-  border-top:none;
-  
-  }
-  
-  
-  
-  .answer.matrix{
-  border-bottom:1px solid #c4c4c4;
-  border-top:1px solid #000;
-  background: #000;
-  }
-  
-  .answer.checked{
-  border-bottom:1px solid #36dea7 !important;
-  }
-  
-  .answer.checked > div > span{
-  color:#36dea7!important;
-  }
-  .answercol1, .answercol2{
-  background-color: #312f3c!important;
-  position: relative;
-  }
-  
-  .answercol1 div, .answercol2 div {
-  margin: auto !important;
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  width: 100%;
-  padding: 0!important;
-  }
-  
-  .poptop, .popbotl, .popbotm, .popbotr, .popmokr, .popmokl, .popmidr, .popmidl{
-  display: none;
-  }
-  
-  .popmidm, .popmokm{
-  background: #312f3c;
-  border:1px solid #c4c4c4;
-  }
-  
-  .popmidm{
-  border-bottom: none;
-  }
-  
-  .popmidm b, .popmidm p{
-  color: #36dea7;
-  }
-  
-  .popinmid{
-  margin: 6px 6px 0px;
-  }
-  
-  .popmokm{
-  border-top: none;
-  height: auto;
-  
-  }
-  
-  /* - - back-/continuebutton - - */
-  #back_btn, #next_btn, #popok{
-  background:none;
-  border:2px solid #ffffff;
-  color:#FFF;
-  cursor:pointer;
-  
-  
-  font-size: 16px;
-  font-weight:400;
-  margin-bottom:1em;
-  margin-top:2em;
-  outline:none;
-  padding:.75em 2em;
-  text-decoration: none;
-  text-transform:none;
-  
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing:grayscale;
-  
-  -webkit-transition: all 250ms ease-in-out;
-  -moz-transition: all 250ms ease-in-out;
-  -o-transition: all 250ms ease-in-out;
-  transition: all 250ms ease-in-out;
-  
-  /* destroy safari input look ... */
-  -webkit-appearance: none;
-  
-  
-  border-radius: 20em;
-  }
-  
-  
-  #back_btn:hover, #next_btn:hover, #popok:hover{
-  text-decoration:none;
-  }
-  
-  #next_btn, #popok{
-  font-weight:600;
-  margin-left:1%;
-  margin-right:1%;
-  }
-  
-  #back_btn{
-  margin-left:1%;
-  margin-right:1%;
-  }
-  
-  #popok{
-  border:1px solid #c4c4c4;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  padding: .25em 2em;
-  }
-  
-  b{font-weight:600;}
-  b > b {font-weight:700;}
-  
-  
-  
-  
-  .bottomtable{
-  border-bottom: 1px solid #333;
-  margin-left:auto;
-  margin-right:auto;
-  max-width:1280px;
-  width:100%;
-  }
-  
-  
-  
-  /* - - info line bottom - - */
-  #infooutertable{border-collapse: collapse;}
-  #infoinnertable{border-collapse: collapse;}
-  
-  @-webkit-keyframes greenPulse {
-    from { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-    50% { background-color: #22ffb6; -webkit-box-shadow: 0 0 18px #2eb085; -moz-box-shadow: 0 0 18px #2eb085; box-shadow: 0 0 18px #2eb085; }
-    to { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-  }
-  @-moz-keyframes greenPulse {
-    from { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-    50% { background-color: #22ffb6; -webkit-box-shadow: 0 0 18px #2eb085; -moz-box-shadow: 0 0 18px #2eb085; box-shadow: 0 0 18px #2eb085; }
-    to { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-  }
-  @keyframes greenPulse {
-    from { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-    50% { background-color: #22ffb6; -webkit-box-shadow: 0 0 18px #2eb085; -moz-box-shadow: 0 0 18px #2eb085; box-shadow: 0 0 18px #2eb085; }
-    to { background-color: #36dea7; -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
-  }
-  
-  .greenPulse{
-    -webkit-animation-name: greenPulse;
-    -webkit-animation-duration: 2s;
-    -webkit-animation-iteration-count: infinite;
-  
-    animation-name: greenPulse;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-  
-    color:#000 !important;
-  }
-  
-  
-  .outerprogress{
-  background-color:#20447d;
-  height:6px;
-  width:100%;
-  }
-  
-  .innerprogress{
-  background-color:#4188fb;
-  float:left;
-  height:100%; 
-  -webkit-transition: width 1.5s, height 1.5s, background-color 1.5s, -webkit-transform 1.5s;
-  transition: width 1.5s, height 1.5s, background-color 1.5s, transform 1.5s;
-  }
-  
-  .textprogress{
-  
-  color:#999;
-  font-size: .75em;
-  font-weight:600;
-  
-  margin-bottom:.25em;
-  text-align:left;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-  z-index:2;
-  }
-  
-  /* -------------------------------------------------
-                   ADDITIONAL PAGES
-  ------------------------------------------------- */
-  
-  /*adjustments...*/
-  
-  table{text-align:center;} /*thx...*/
-  
-  div.maincontainer > .upperspacetable, div.maincontainer > .mainspacertable{
-  display:none;
-  }
-  
-  .col1.tt01, .col1.tt03, .col1.bt01, .col1.bt03{
-  display:none;
-  }
-  
-  .additionalpagetext{
-  color:#F1F1F1;
-  font-size:1em;
-  }
-  
-  .additionalpagetext a{
-  background-color:#312565;
-  display:inline-block;
-  color:#FFFFFF!important;
-  cursor:pointer;
-  font-size:0.875em;
-  font-weight:600;
-  outline:none;
-  padding: .5em 10px;
-  text-align: center;
-  }
-  
-  a.defaultlink{
-  background:none;
-  border-bottom:1px solid #00D3B7;
-  display:inline-block;
-  color:#FFFFFF!important;
-  cursor:pointer;
-  font-size:inherit;
-  font-weight:inherit;
-  outline:none;
-  padding: 0;
-  text-align: inherit;
-  }
-  
-  
-  
-  /* -------------------------------------------------
-                   EXTRA STYLING
-  ------------------------------------------------- */
-  
-  /* - - textfields - - */
-  textarea, input[type="text"], input[type="number"], input[type="email"], input[type="password"], select{
-  background:#312f3c!important;
-  border:1px solid #c4c4c4;
-  color:#F1F1F1!important;
-  font-size:1em;
-  outline:0 none;
-  padding:.375em 1em;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-  vertical-align:middle;
-  /***/
-  -webkit-transition: all 250ms ease-in-out;
-  -moz-transition: all 250ms ease-in-out;
-  -o-transition: all 250ms ease-in-out;
-  transition: all 250ms ease-in-out;
-  
-  max-width:100%!important;
-  
-  height:inherit!important;
-  
-      margin-bottom: .125em;
-  }
-  
-  input[type="number"], input[name="show"]{
-  text-align:center;
-  }
-  
-  input[name="show"]{
-  background:#312f3c!important;
-  border:1px solid #cad7de;
-  color:#F1F1F1!important;
-  font-weight: 600;
-  padding:.375em 1em;
-  font-size:1em;
-  outline:0 none;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-  vertical-align:middle;
-  max-width:100%!important;
-  }
-  
-  textarea:hover, input:hover[type="text"], input:hover[type="number"], input:hover[type="email"], input:hover[type="password"], select:hover, textarea:focus, input:focus[type="text"], input:focus[type="number"], input:focus[type="email"], input:focus[type="password"], select:focus{
-  background:#312f3c!important;
-  border:1px solid #cad7de;
-  color:#F1F1F1!important;
-  outline:0 none;
-  
-  max-width:100%!important;
-  }
-  
-  
-  
-  /* -------------------------------------------------
-                   TYPOGRAPHY
-  ------------------------------------------------- */
-  
-  /* - - links - - */
-  /* NUKE LAYOUTSETTINGS */
-  a{ color:#FFF!important; }
-  a:link{ color:#FFF!important; }
-  a:visited{ color:#FFF!important; }
-  a:hover{ color:#FFF!important; }
-  a:active{ color:#FFF!important; }
-  
-  a{
-    background:transparent; /*remove the gray background color from active links in IE 10.*/
-  }
-  
-  a:active,
-  a:hover{
-    outline:0; /*improve readability when focused and also mouse hovered in all browsers.*/
-  }
-  
-  a{
-  font-weight:normal;
-  margin:0;
-  padding:0;
-  text-decoration:none;
-  }
-  
-  a:hover{
-  text-decoration:none;
-  }
-  
-  h1{
-  font-size:22px;
-  color:#333;
-  margin:0;
-  padding-left:20px;
-  float:left;
-  }
-  h1,h2,h3,h4,h5,h6{
-  line-height:1.1; margin-bottom:5px; color:#08c;
-  }
-  h1 small, h2 small, h3 small, h4 small, h5 small, h6 small{ font-size:60%; color:#6f6f6f; line-height:0; text-transform:none; }
-  
-  h1{ font-weight:200; font-size:44px;}
-  h2{ font-weight:200; font-size:37px;}
-  h3{ font-weight:500; font-size:27px;}
-  h4{ font-weight:500; font-size:23px;}
-  h5{ font-weight:500; font-size:17px;}
-  h6{ font-weight:900; font-size:14px; text-transform:uppercase; color:#444;}
-  
-  
-  /* - - textselection - - */
-  ::selection{}
-  ::-moz-selection{}
-  
-  
-  /* - - text-level semantics - - */
-  abbr[title]{
-  border-bottom:1px dotted; /*address styling not present in IE 8/9/10/11, Safari, and Chrome.*/
-  }
-  
-  b,strong{
-  font-weight:bold; /*address style set to `bolder` in Firefox 4+, Safari, and Chrome.*/
-  }
-  
-  b{
-  font-weight: 600;
-  }
-  
-  strong{
-  font-weight: 700;
-  }
-  
-  dfn{
-  font-style:italic; /* address styling not present in Safari and Chrome.*/
-  }
-  
-  /*address styling not present in IE 8/9.*/
-  mark{
-  background:#ff0;
-  color:#000;
-  }
-  
-  small{
-  font-size:80%; /*address inconsistent and variable font size in all browsers.*/
-  }
-  
-  /*prevent `sub` and `sup` affecting `line-height` in all browsers.*/
-  sub,
-  sup{
-  font-size:75%;
-  line-height:0;
-  position:relative;
-  vertical-align:baseline;
-  }
-  
-  sup{
-  top:-0.5em;
-  }
-  
-  sub{
-  bottom:-0.25em;
-  }
-  
-  
-  /* - - embedded content - - */
-  img{
-  border:0; /*remove border when inside `a` element in IE 8/9/10.*/
-  }
-  
-  svg:not(:root){
-  overflow:hidden; /*correct overflow not hidden in IE 9/10/11.*/
-  }
-  
-  hr{
-  box-sizing:content-box;
-  height:0;
-  -moz-box-sizing:content-box;
-  }
-  
-  
-  /* - - helpful classes - - */
-  .width100{ width:100%; }
-  .width75{ width:75%; }
-  .width50{ width:50%; }
-  .floatLeft{ float:left; }
-  .floatRight{ float:right; }
-  .alignLeft{ text-align:left; }
-  .alignRight{ text-align:right; }
-  
-  td{
-  padding:0!important;
-  }
-  
-  img{
-  border:0;
-  
-  }
-  
-  img.rounded{
-  border-radius:7px;
-  -moz-border-radius:7px;
-  -webkit-border-radius:7px;
-  }
-  
-  img.outlined{
-  border:1px solid #333;
-  }
-  
-  /* - - tooltip - - */
-  a.tooltip{
-  outline:none;
-  }
-  a.tooltip strong{
-  line-height:30px;
-  }
-  a.tooltip:hover{
-  text-decoration:none;
-  }
-  
-  a.tooltip span{
-  display:none;
-  line-height:16px;
-  margin-top:60px;
-  margin-left:-160px;
-  padding:14px 14px;
-  /*width:300px;*/
-  z-index:10;
-  }
-  a.tooltip:hover span{
-  background:#333;
-  border:2px solid #FFF;
-  color:#EEE;
-  display:inline;
-  position:absolute;
-  }
-  .callout{
-  border:0;
-  left:120px;
-  position:absolute;
-  top:-14px;
-  z-index:20;
-  }
-  
-  /*CSS3 extras*/
-  a.tooltip span
-  {
-  border-radius:3px;
-  -moz-border-radius:3px;
-  -webkit-border-radius:3px;
-  -webkit-box-shadow:00px 0px 5px rgba(0,0,0,0.5);
-  -moz-box-shadow:0px 0px 5px rgba(0,0,0,0.5);
-  box-shadow:0px 0px 5px rgba(0,0,0,0.5);
-  /*opacity:0.8;*/
-  }
-  /* Layout V30 */
-  
